fixing section overlapping <in progress>

--- a/main.css
+++ b/main.css
@@ -9,34 +9,36 @@ body {
     font-family: sans-serif;
 }
 
-nav {
+.navbar {
     display: flex;
     position: fixed;
     top: 0;
     left: 0;
-    height: 40px;
+    height: 45px;
     width: 100%;
     background: rgb(255, 255, 255);
     justify-content: space-between;
     align-items: center;
 }
 
-nav .logo {
-    margin: 0, 35px;
+.navbar .logo {
+    margin: auto;
     padding-left: 10px;
     color: #5a12b9;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 
 }
 
-nav ul {
+.navbar ul {
     display: flex;
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-nav ul li a {
+.navbar ul li a {
     margin: 0 20px;
     padding: 30px, 30px;
     text-decoration: none;
@@ -47,8 +49,9 @@ nav ul li a {
 
 }
 
-nav ul li a:hover {
+.navbar ul li a:hover {
     background: #b5b3b8;
+    margin: 20px, 20px;
 
 }
 
@@ -60,6 +63,23 @@ header {
 }
 
 .headerBox {
-    padding: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.facePic {
+    border-right: 2px solid #b5b3b8;
+    padding: 0 15px;
+    margin: 30px 0;
+}
+
+.face {
+    border-radius: 40%;
+    border: 4px solid #5a12b9;
+
+}
+
+.headerTitles {
+    float: right;
 }
 
